@@ -1,3 +1,6 @@
+17 April 2007: Wouter
+	- copy and decompress dnames.
+
 16 April 2007: Wouter
 	- following a small change in LDNS, parsing code calculates the
 	  memory size to allocate for rrs.
